--- a/templates/login.html
+++ b/templates/login.html
@@ -28,7 +28,8 @@
       </form>
 
       <div id="msg" class="msg" aria-live="polite"></div>
-      <div class="footerNote">Tip: press F11 for fullscreen demo.</div>
+      <div class="footerNote">Tip: press F11 for fullscreen demo.
+      </div>
     </div>
   </div>
 
