--- a/templates/sudoku.html
+++ b/templates/sudoku.html
@@ -14,7 +14,10 @@
     </div>
     <div class="status">
       <div id="timer" class="timer">Time: --</div>
-      <div id="attempts" class="attempts">Attempts: --</div>
+      <div class="attempts">
+        <span class="attempts-label">Lives:</span>
+        <span id="hearts" class="hearts" aria-label="Lives"></span>
+      </div>
     </div>
   </div>
 
